--- a/src/main/resources/com/example/labaone/hello-view.fxml
+++ b/src/main/resources/com/example/labaone/hello-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="416.0" prefWidth="689.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.labaone.HelloController" stylesheets="@styles.css">
+<VBox prefHeight="416.0" prefWidth="689.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.labaone.HelloController">
    <children>
       <FlowPane prefHeight="200.0" prefWidth="200.0">
          <children>
@@ -35,8 +35,8 @@
                   <Separator layoutX="526.0" layoutY="-2.0" maxHeight="-Infinity" maxWidth="-Infinity" orientation="VERTICAL" prefHeight="353.0" prefWidth="12.0" />
                   <Line endX="117.0" endY="-60.0" layoutX="366.0" layoutY="60.0" startX="117.0" startY="293.0" />
                   <Line endX="85.0" endY="-61.0" layoutX="319.0" layoutY="61.0" startX="85.0" startY="292.0" />
-                  <Circle fx:id="Big_Circle" fill="#0cafe1" layoutX="404.0" layoutY="177.0" radius="30.0" stroke="BLACK" strokeType="INSIDE" />
-                  <Circle fx:id="Small_Circle" fill="#0044ff" layoutX="483.0" layoutY="177.0" radius="15.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fx:id="Big_Circle" fill="#0cafe1" layoutX="404.0" layoutY="177.0" radius="30.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+                  <Circle fx:id="Small_Circle" fill="#0044ff" layoutX="483.0" layoutY="177.0" radius="15.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
                   <Polygon fx:id="Strela" fill="#f00000" layoutX="74.0" layoutY="146.0" points="-14.0, 26.0, -14.0, 38.0, -3.0, 32.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
                </children>
             </Pane>
@@ -47,12 +47,12 @@
                         <Insets bottom="10.0" top="50.0" />
                      </VBox.margin>
                      <font>
-                        <Font name="Cambria Bold" size="19.0" />
+                        <Font name="Roboto" size="19.0" />
                      </font>
                   </Label>
                   <Label fx:id="scorePoints" text="0">
                      <font>
-                        <Font name="Cambria Bold" size="19.0" />
+                        <Font name="Roboto" size="19.0" />
                      </font>
                   </Label>
                   <Label text="Выстрелов:">
@@ -77,9 +77,9 @@
       </FlowPane>
       <Pane id="panelButton" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to bottom left,  #0cafe1, #00ff11);">
          <children>
-            <Pane layoutX="104.0" layoutY="7.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="49.0" prefWidth="522.0" style="-fx-border-radius: 15; -fx-background-radius: 15; -fx-background-color: rgba(207, 207, 207, 0.5); -fx-border-color: #FFFFFF;">
+            <Pane layoutX="14.0" layoutY="7.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="49.0" prefWidth="437.0" style="-fx-border-radius: 15; -fx-background-radius: 15; -fx-background-color: rgba(207, 207, 207, 0.5); -fx-border-color: #FFFFFF;">
                <children>
-                  <Button layoutX="14.0" layoutY="9.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#StartGame" prefHeight="32.0" prefWidth="98.0"  text="Начать игру">
+                  <Button layoutX="14.0" layoutY="9.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#StartGame" prefHeight="32.0" prefWidth="98.0" text="Начать игру">
                      <font>
                         <Font name="Cambria Bold" size="12.0" />
                      </font>
@@ -87,7 +87,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button layoutX="128.0" layoutY="9.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#PauseGame" prefHeight="32.0" prefWidth="128.0" text="Остановить игру" textAlignment="CENTER">
+                  <Button layoutX="128.0" layoutY="9.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#PauseGame" prefHeight="32.0" prefWidth="60.0" text="Пауза" textAlignment="CENTER">
                      <font>
                         <Font name="Cambria Bold" size="12.0" />
                      </font>
@@ -95,7 +95,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button layoutX="267.0" layoutY="9.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#Shoot" prefHeight="32.0" prefWidth="95.0"  text="Выстрелить">
+                  <Button layoutX="202.0" layoutY="9.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#Shoot" prefHeight="32.0" prefWidth="95.0" text="Выстрелить">
                      <font>
                         <Font name="Cambria Bold" size="12.0" />
                      </font>
@@ -103,13 +103,10 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button layoutX="379.0" layoutY="9.0" mnemonicParsing="false" onAction="#ReplaceGame" prefHeight="32.0" prefWidth="128.0"  text="Возобновить игру">
+                  <Button layoutX="308.0" layoutY="9.0" mnemonicParsing="false" onAction="#StopGame" prefHeight="32.0" prefWidth="115.0" text="Остановить игру">
                      <font>
                         <Font name="Cambria Bold" size="12.0" />
                      </font>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
                   </Button>
                </children>
             </Pane>
